--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ h4{
 
 .quisuisje{
 	width: 100%;
-	height:950px;
+	height:1600px;
 	padding: 100px 0px;
 	background-color:#131313;
 }
@@ -205,8 +205,34 @@ button:hover{
 	cursor: pointer;
 }
 
+.titrecourte{
+	padding-top:110px;
+	text-align: left;
+	margin-left:20px;
+
+}
+
+.card2{
+	height: 500px;
+	width: 400px;
+	padding: 20px 35px;
+	background: #19191900;
+	border-radius: 20px;
+	margin: 70px;
+	position: relative;
+	overflow: hidden;
+	text-align:left;
+}
+
+.pracourte p{
+	color: rgba(239, 232, 130, 0.8);
+	font-size: 22px;
+	line-height: 27px;
+	margin-bottom: 25px;
+}
+
 .parcours{
-	height: 950px;
+	height: 730px;
 	width: 100%;
 	background:linear-gradient(rgb(0,0,0),rgb(19, 29, 15));	
 }
@@ -235,7 +261,7 @@ button:hover{
 }
 
 .card4{
-	height: 500px;
+	height: 450px;
 	width: 800px;
 	padding: 20px 35px;
 	background: #191919;
@@ -261,38 +287,46 @@ button:hover{
 	margin-left:20px;
 }
 
-.box31{
-	display:flex;
-	justify-content:left;
+.parcours{
+	height: 730px;
+	width: 100%;
+	background:linear-gradient(rgb(0,0,0),rgb(19, 29, 15));	
+}
+
+.titre .titreparcours{
+	padding-top:110px;	
+}
+
+.imgparcours{
+	width:100%;
+}
+
+.imgparcours .imgecole{
+	height:auto;
+	width:300px;
+	position:relative;
+	border: 3px solid #5e9f3a;
+
+}
+
+.box3{
+	display: flex;
+	justify-content:space-between;
 	align-items: center;
 	min-height: 300px;
-	width: 50%;
-	
 }
-
-.box32{
-	display:flex;
-	justify-content:right;
-	align-items:center;
-	min-height: 300px;
-	width:50%;
-	
-}
-
 
 .card3{
-	height: 350px;
-	width: 600px;
+	height: 450px;
+	width: 800px;
 	padding: 20px 35px;
 	background: #191919;
 	border-radius: 20px;
-	margin:70px;
-	margin-bottom:40px;
+	margin: 20px;
 	position: relative;
 	overflow: hidden;
 	text-align: center;
 	border: 0.5px solid #5e9f3a;
-
 }
 
 
@@ -332,57 +366,6 @@ button:hover{
 }
 
 
-
-.card2 .ecole{
-	height: 400px;
-	width: 45%;
-	padding: 20px 35px;
-	background: #191919;
-	border-radius: 20px;
-	margin: 50px;
-	position: relative;
-	overflow: hidden;
-	text-align: center;
-	border: 0.5px solid #5e9f3a;
-}
-
-.card2 .jeux{
-	position: relative;
-	height: 400px;
-	width: 45%;
-	padding: 20px 35px;
-	background: #191919;
-	border-radius: 20px;
-	margin: 50px;
-	position: relative;
-	overflow: hidden;
-	text-align: center;
-	border: 0.5px solid #5e9f3a;
-	bottom:240px;
-
-}
-
-.image{
-	width:50%;
-}
-
-
-.image .img1{
-	position:relative;
-	left:105%;
-	bottom:380px;
-    width:90%;	
-}
-
-.image .img2{
-	position:relative;
-	left:105%;
-	bottom:630px;
-	width:75%;	
- }
-
-
- 
  .portraitchinois{
 	background-image: url(../img/nuit.jpeg);
 	background-size: cover;
@@ -426,7 +409,7 @@ button:hover{
 	padding-top:38px;
 }
 
-.moi2{
+.sakura{
     width:370px;
 	height:auto;
 	position: relative;
